--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
             color: black;
         }
 
+        main{
+            margin-top: 50px;
+        }
+
         .navegation{
             display: flex;
             align-items: center;
@@ -80,7 +84,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: 0px 10%;
+            padding: 0px 2%;
         }
 
         .home-text{
@@ -159,7 +163,7 @@
             }
 
             .nav-item{
-                margin: 16px 0;
+                margin: 8px 0;
             }
 
             .home{
