--- a/lixo.css
+++ b/lixo.css
@@ -1,192 +1,245 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-            list-style: none;
-            text-decoration: none;
-        }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    list-style: none;
+    text-decoration: none;
+}
 
-        body{
-            background-color: white;
-            color: black;
-        }
+body {
+    background-color: white;
+    color: black;
+}
 
-        .navegation{
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 18px 40px;
-            box-shadow: 0 0.1rem 0.5rem #ccc;
-            background-color: white;
-            transition: all 0.5s;
-        }
+.navegation {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 18px 40px;
+    box-shadow: 0 0.1rem 0.5rem #ccc;
+    background-color: white;
+    transition: all 0.5s;
+}
 
-        .navegation .logo{
-            color: #727272;
-            font-size: 1.7rem;
-            font-weight: 600;
-        }
+.navegation .logo {
+    color: #727272;
+    font-size: 1.7rem;
+    font-weight: 600;
+}
 
-        .logo span{
-            color: #1aeca6;
-        }
+.logo span {
+    color: #1aeca6;
+}
 
-        .navegation ul{
-            display: flex;
-            align-items: center;
-            gap: 5rem;
-        }
+.navegation ul {
+    display: flex;
+    align-items: center;
+    gap: 5rem;
+}
 
-        .navegation ul li a{
-            color: #1aeca6;
-            font-size: 17px;
-            font-weight: 500;
-            transition: all 0.5s;
-        }
+.navegation ul li a {
+    color: #1aeca6;
+    font-size: 17px;
+    font-weight: 500;
+    transition: all 0.5s;
+}
 
-        .navegation ul li a:hover{
-            color:white;
-            padding: 10px;
-            background-color: #1aeca6;
-            border-radius: 10px;
-            transition: all 0.5s;
-        }
+.navegation ul li a:hover {
+    color: white;
+    padding: 10px;
+    background-color: #1aeca6;
+    border-radius: 10px;
+    transition: all 0.5s;
+}
 
-       .menu{
-            cursor: pointer;
-            display: none;
-        }
+.menu {
+    cursor: pointer;
+    display: none;
+}
 
-        .menu .bar{
-            display: block;
-            width: 28px;
-            height: 3px;
-            border-radius: 3px;
-            background: #727272;
-            margin: 5px auto ;
-            transition: all 0.3s;
-        }
+.menu .bar {
+    display: block;
+    width: 28px;
+    height: 3px;
+    border-radius: 3px;
+    background: #727272;
+    margin: 5px auto;
+    transition: all 0.3s;
+}
 
-       .menu .bar:nth-child(1), .menu .bar:nth-child(3){
-            background-color: #1aeca6;
-        }
+.menu .bar:nth-child(1),
+.menu .bar:nth-child(3) {
+    background-color: #1aeca6;
+}
 
-        main{
-            margin-top: 50px;
-        }
-        .home{
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content:space-between;
-            padding: 0px 2%;
-        }
+main {
+    margin-top: 50px;
+}
 
-        .home-text{
-            max-width: 37rem;
-        }
+.home {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 2%;
+}
 
-        .home-text .text-h4{
-            font-size: 1.5rem;
-            color: #1aeca6;
-            margin-bottom: 1rem;
-        }
+.home-text {
+    max-width: 37rem;
+}
 
-        .home-text .text-h1{
-            font-size: 4rem;
-            margin-bottom: 1rem;
-            line-height: 4rem;
-        }
+.home-text .text-h4 {
+    font-size: 1.5rem;
+    color: #1aeca6;
+    margin-bottom: 1rem;
+}
 
-        .home-text p{
-            font-size: 16px;
-        }
+.home-text .text-h1 {
+    font-size: 4rem;
+    margin-bottom: 1rem;
+    line-height: 4rem;
+}
 
-        .home-btn{
-            padding: 15px 45px;
-            background-color: #1aeca6;
-            color: white;
-            border-radius: 10px;
-            font-weight: 700;
-            transition: all 0.5s;
-        }
+.home-text p {
+    font-size: 16px;
+}
 
-        .home-btn:hover{
-            background-color: #02aa72;
-        }
+.home-btn {
+    padding: 15px 45px;
+    background-color: #1aeca6;
+    color: white;
+    border-radius: 10px;
+    font-weight: 700;
+    transition: all 0.5s;
+}
 
-        .home-img img{
-            width: 100%;
-        }
+.home-btn:hover {
+    background-color: #02aa72;
+}
 
-        @media (max-width : 900px){
-            .navegation{
-                padding: 18px 20px;
-            }
+.home-img img {
+    width: 100%;
+}
 
-            .menu{
-                display: block;
-                cursor: pointer;
-            }
+@media (max-width : 900px) {
+    .navegation {
+        padding: 18px 20px;
+    }
 
-            .menu.ativo .bar:nth-child(1){
-                transform: translateY(8px) rotate(45deg);
-            }
+    .menu {
+        display: block;
+        cursor: pointer;
+    }
 
-            .menu.ativo .bar:nth-child(2){
-                opacity: 0;
-            }
+    .menu.ativo .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
 
-            .menu.ativo .bar:nth-child(3){
-                transform: translateY(-8px) rotate(-45deg);
-            }
+    .menu.ativo .bar:nth-child(2) {
+        opacity: 0;
+    }
 
-            .nav-menu{
-                position: fixed;
-                right: -100%;
-                top: 70px;
-                width: 100%;
-                height: 100%;
-                flex-direction: column;
-                background-color: white;
-                gap: -10px;
-                transition: 0.3s;
-            }
+    .menu.ativo .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
 
-            .nav-menu.ativo{
-                right: 0;
-            }
+    .nav-menu {
+        position: fixed;
+        right: -100%;
+        top: 70px;
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        background-color: white;
+        gap: -10px;
+        transition: 0.3s;
+    }
 
-            .nav-item{
-                margin: 8px 0;
-            }
+    .nav-menu.ativo {
+        right: 0;
+    }
 
-            .home{
-                padding: 10px 2%;
-                flex-direction: column;
-                overflow: hidden;
-                gap: 2rem;
-            }
+    .nav-item {
+        margin: 8px 0;
+    }
 
-            .home .text-h4{
-                font-size: 15px;
-            }
+    .home {
+        padding: 10px 2%;
+        flex-direction: column;
+        overflow: hidden;
+        gap: 2rem;
+    }
 
-            .home .text-h1{
-                font-size: 2.5rem;
-                line-height: 3rem;
-            }
+    .home .text-h4 {
+        font-size: 15px;
+    }
 
-            .home p{
-                font-size:18px;
-                
-            }
+    .home .text-h1 {
+        font-size: 2.5rem;
+        line-height: 3rem;
+    }
 
-            .home-img{
-                width: 100%;
-                align-items: center;
-            }
-        }
+    .home p {
+        font-size: 18px;
+
+    }
+
+    .home-img {
+        width: 100%;
+        align-items: center;
+    }
+}
+
+.abas {
+    display: flex;
+    justify-content: center;
+    border: 1px solid black;
+    width: 95%;
+    margin: auto;
+}
+
+.aba {
+    flex: 1;
+    padding: 5px;
+    cursor: pointer;
+    border-right: 1px solid rgb(128, 128, 128);
+    background-color: white;
+    color: black;
+    font-weight: 600;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.aba:last-child {
+    border-right: none;
+}
+
+.aba.ativa {
+    background-color: #1aeca6;
+    color: white;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.conteudo {
+    width: 95%;
+    margin: auto;
+    padding: 15px;
+    border: 1px solid black;
+    background-color: white;
+    display: none;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    margin-bottom: 50px;
+}
+
+.conteudo.ativo {
+    display: block;
+}
